@@ -1,3 +1,8 @@
+2012-03-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/gen.c:
+	  Use 16-bit addition instructions for 8-bit additions when cheaper and possible.
+
 2012-03-07 Borut Razem <borut.razem AT gmail.com>
 
 	* Makefile.in: copy correct sdbinutils executables to bin
